--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,9 +20,9 @@ jobs:
             goos: windows
     steps:
     - uses: actions/checkout@v3
-    - uses: wangyoucao577/go-release-action@v1.37
+    - uses: wangyoucao577/go-release-action@v1.40
       with:
-        asset_name: gu-${{ github.ref_name }}-${{ matrix.goos }}-${{ matrix.goarch }}
+        asset_name: io-${{ github.ref_name }}-${{ matrix.goos }}-${{ matrix.goarch }}
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
